--- a/SUSY_pyfits.ipynb
+++ b/SUSY_pyfits.ipynb
@@ -62,7 +62,7 @@
     "1. top pair production in association with a photon (*tty*)\n",
     "2. W boson production in association with a photon (*Wy*). Only hadronic tau decays of the W boson are considered.\n",
     "\n",
-    "The analysis regions (SR, CRs, VR) are defined by kinematic selections on a number of variables. The exact definition is not important in the context of this presentations but is given on the table below for clarity.\n",
+    "The analysis regions (SR, CRs, VR) are defined by kinematic selections on a number of variables. The exact definition is not important in the context of this presentations but is given on the table below for reference.\n",
     "\n",
     "| Selection                             | SR        | CR-tty               | CR-Wy                | VR-tty    | VR-Wy         |\n",
     "| ---                                   | ---       | ---                  | ---                  | ---       | ---           |\n",
@@ -109,6 +109,23 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pyhf.__version__)"
    ]
   },
   {
