--- a/SUSY_pyfits.ipynb
+++ b/SUSY_pyfits.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "| Selection                             | SR        | CR-tty               | CR-Wy                | VR-tty    | VR-Wy         |\n",
     "| ---                                   | ---       | ---                  | ---                  | ---       | ---           |\n",
-    "| $E_\\text{T}^{\\text{miss}}$ trigger    | ✔         | ✔                    | ✔                    | ✔         | ✔             |\n",
+    "| $E_\\mathrm{T}^{\\mathrm{miss}}$ trigger    | ✔         | ✔                    | ✔                    | ✔         | ✔             |\n",
     "| $E_\\text{T}^{\\text{miss}}$            | > 400 GeV | $\\in$ (250, 400) GeV | $\\in$ (250, 400) GeV | > 400 GeV | > 400 GeV     |\n",
     "| $\\text{N}_{\\text{leptons}}$           | 0         | 0                    | 0                    | 0         | 0             |\n",
     "| $\\text{N}_{\\gamma}$                   | 1         | 1                    | 1                    | 1         | 1             |\n",
