--- a/SUSY_pyfits.ipynb
+++ b/SUSY_pyfits.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "## Likelihood Function\n",
     "\n",
-    "A binned likelihood function is build and fit to estimate both the background and the signal normalization factors, along with nuisance parameters of the fit describing the measurement systematic uncertainties. Such likelihood function is build as a product of Poisson probability functions $P(n_i, \\lambda_i)$ describing the probability to observe $n$ events when $\\lambda$ are expected in region $i$ (SR, CR, VR). The $\\lambda_i$ depends on the normalization factors, generally from both the (irreducible) background ($\\boldsymbol{\\mu}$) and the signal processes ($\\mu_{\\mathrm{sig}}$). Systematic uncertainties of the measurement (nuisance parameters) are constrained by normal distributions $C(\\boldsymbol{\\theta}^\\mathrm{0},\\boldsymbol{\\theta})$, where $\\boldsymbol{\\theta}^\\mathrm{0}$ is the expected values of the nuisance parameters. The resulting likelihood is:\n",
+    "A binned likelihood function is build and fit to estimate both the background and the signal normalization factors, along with nuisance parameters of the fit describing the measurement systematic uncertainties. Such likelihood function is build as a product of Poisson probability functions $P(n_i, \\lambda_i)$ describing the probability to observe $n$ events when $\\lambda$ are expected in region $i$ (SR, CR, VR). The $\\lambda_i$ depends on the normalization factors, generally from both the (irreducible) background ( $\\boldsymbol{\\mu}$ ) and the signal processes ($\\mu_{\\mathrm{sig}}$). Systematic uncertainties of the measurement (nuisance parameters) are constrained by normal distributions $C(\\boldsymbol{\\theta}^\\mathrm{0},\\boldsymbol{\\theta})$, where $\\boldsymbol{\\theta}^\\mathrm{0}$ is the expected values of the nuisance parameters. The resulting likelihood is:\n",
     "\n",
     "$$\n",
     "L  = \\prod_{i\\in\\text{SR}} \\mathcal{P}(n_i|\\lambda_i(\\mu_\\text{sig},\\boldsymbol{\\mu},\\boldsymbol{\\theta})) \\times \\prod_{i\\in\\text{CR}} \\mathcal{P}(n_i|\\lambda_i(\\mu_\\text{sig},\\boldsymbol{\\mu},\\boldsymbol{\\theta})) \\times C(\\boldsymbol{\\theta}^\\mathrm{0},\\boldsymbol{\\theta})\n",
@@ -66,7 +66,7 @@
     "\n",
     "| Selection                             | SR        | CR-tty               | CR-Wy                | VR-tty    | VR-Wy         |\n",
     "| ---                                   | ---       | ---                  | ---                  | ---       | ---           |\n",
-    "| $E_\\mathrm{T}^{\\mathrm{miss}}$ trigger    | ✔         | ✔                    | ✔                    | ✔         | ✔             |\n",
+    "| $E_\\text{T}^{\\text{miss}}$ trigger    | ✔         | ✔                    | ✔                    | ✔         | ✔             |\n",
     "| $E_\\text{T}^{\\text{miss}}$            | > 400 GeV | $\\in$ (250, 400) GeV | $\\in$ (250, 400) GeV | > 400 GeV | > 400 GeV     |\n",
     "| $\\text{N}_{\\text{leptons}}$           | 0         | 0                    | 0                    | 0         | 0             |\n",
     "| $\\text{N}_{\\gamma}$                   | 1         | 1                    | 1                    | 1         | 1             |\n",
